--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: '3.1'
 services:
   database:
     image: cassandra
-    container_name: fireflies-cassandra
+    container_name: auth_db
     ports:
-      - "9042:9042"
+      - "9043:9042"
