--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,11 @@
 			<version>${kotlin.coroutines.version}</version>
 		</dependency>
 
-		<!-- Web Client -->
+		<!-- Web Flux -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
+			<version>2.2.6.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectreactor</groupId>
